# xpander.ai

./: .gitignore  LICENSE  PR_BODY.md  README.md
01-notebooks/: swe-agent-workshop.ipynb
02-agents/auto-pr-agent/: .env.example  README.md  requirements.txt  xpander_handler.py
02-agents/devops/: .env.example  .gitignore  Dockerfile  Dockerfile.old  README.md  iam-permissions-guide.md  requirements.txt  xpander_handler.py
02-agents/local-agent/: .env.example  readme.md  requirements.txt  xpander_handler.py
02-agents/travel-agent/: .gitignore  Dockerfile  README.md  requirements.txt  xpander_handler.py
03-framework-examples/langchain/: README.md
03-framework-examples/nemo-agno-personal-finance-agent/: Dockerfile  README.md  xpander_handler.py
Getting-Started/hello-world/: .env.example  app.py  my_agent.ipynb  my_agent.py  requirements.txt
agents/Xpander_Auto_PR/: .env.example  README.md  main.py  pr_reviews.db  requirements.txt  xpander_handler.py
agents/Xpander_Junior_AI_SRE/: .env.example  Dockerfile  README.md  agno_agent_with_backend.py  xpander_handler.py
agents/Xpander_Travel_Assistant/: .env.example  .gitignore  README.md  main.py  nn_agent_instructions.json  requirements.txt  (+1 more)
framework-examples/nemo-agent-agno-example/: .env.example  README.md  mcp_agno_function.py  pyproject.toml  workflow.yaml
framework-examples/nemo-agno-personal-finance-agent/: .env.example  Makefile  README.md  nemo_config.yml  pyproject.toml  xpander_nemo_agent.py
hello-world/: my_agent.py
notebooks/: adding-backend-quick-start.ipynb  swe-agent-workshop.ipynb
(+37 files in other folders)
