[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-agno-example"
version = "0.1.0"
description = "MCP Agno Agent Example for AIQ Toolkit"
requires-python = ">=3.11"
dependencies = [
    "aiqtoolkit",
    "aiqtoolkit-agno",
    "awslabs-core-mcp-server",
    "awslabs-eks-mcp-server",
    "agno",
    "mcp",
    "openai",
    "python-dotenv",
    "litellm",
]

[project.entry-points."aiq.plugins"]
mcp_agno = "mcp_agno_function:mcp_agno"